Use Java 17 String formatter